Updated decorators notebook

--- a/core/Python Decorators and attr library.ipynb
+++ b/core/Python Decorators and attr library.ipynb
@@ -4,13 +4,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Decorators and attr library"
+    "# Python Decorators and attr library\n",
+    "\n",
+    "A decorator is a function that takes another function and extends the behavior of the latter function without explicitly modifying it.\n",
+    "\n",
+    "https://realpython.com/primer-on-python-decorators/\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Decorator use examples\n",
+    "\n",
+    "Here are some examples how decorators can be used.\n",
+    "\n",
+    "* Flask web framework\n",
+    " * `@app.route` = a decorator that tells Flask what URLs should trigger the function that it decorates.\n",
+    " * https://flask.palletsprojects.com/en/1.1.x/quickstart/\n",
+    " \n",
+    "* unittest module\n",
+    " * `@unittest.expectedFailure` = tells unittest module that it is expected that the decorated test (function) will fail.\n",
+    " * https://docs.python.org/3/library/unittest.html#skipping-tests-and-expected-failures\n",
+    " \n",
+    "* Timing function execution\n",
+    " * a decorator that records the start and end time of a function call, calculates the difference.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting flask_demo.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile flask_demo.py\n",
+    "\n",
+    "from flask import Flask\n",
+    "app = Flask(__name__)\n",
+    "\n",
+    "@app.route('/')\n",
+    "def index():\n",
+    "    return 'Welcome to our web-app!'\n",
+    "\n",
+    "@app.route('/hello')\n",
+    "def hello_world():\n",
+    "    return 'Hello, World!'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### run the file from command line:\n",
+    "\n",
+    "```\n",
+    "export FLASK_APP=flask_demo.py\n",
+    "flask run\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
     "## What is a higher Order Function?"
    ]
   },
@@ -19,14 +88,7 @@
    "metadata": {},
    "source": [
     "* takes one or more functions as arguments\n",
-    "* returns a function as its result "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Think of it it as a wrapper around another function"
+    "* and/or returns a function as its result "
    ]
   },
   {
@@ -39,13 +101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def foo(bar):\n",
+    "def add_two(bar):\n",
     "    return bar + 2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -58,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -71,23 +140,25 @@
     }
    ],
    "source": [
-    "print(foo(2))\n",
-    "print(type(foo))"
+    "print(add_two(2))\n",
+    "\n",
+    "print(type(add_two))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def foo_with_arg(f, arg):\n",
-    "    return f(arg)"
+    "def call_fn_with_arg(f, arg):\n",
+    "    res = f(arg)\n",
+    "    return res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +170,7 @@
     }
    ],
    "source": [
-    "print(foo_with_arg(foo, 9))"
+    "print(call_fn_with_arg(add_two, 9))"
    ]
   },
   {
@@ -246,36 +317,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert 2*2 == 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-c3d3cff811e3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m2\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "assert 2*2 == 5"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
@@ -288,13 +329,12 @@
     "    def second_child():\n",
     "        return \"Printing from the second_child() function.\"\n",
     "\n",
-    "    try:\n",
-    "        print('Trying to assert that num is 10')\n",
-    "        assert num == 10,\"Num is not 10\"\n",
+    "    print('Checking if num is 10')\n",
+    "    \n",
+    "    if num == 10:\n",
     "        return first_child\n",
-    "    except AssertionError as e: \n",
-    "#         e = \"hmm\"\n",
-    "#         print(f\"Assert error [{e}] \")\n",
+    "\n",
+    "    else:\n",
     "        return second_child\n",
     "\n"
    ]
@@ -316,24 +356,22 @@
     }
    ],
    "source": [
-    "type(foo)"
+    "type(parent)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trying to assert that num is 10\n",
-      "Trying to assert that num is 10\n",
-      "<function parent.<locals>.first_child at 0x000002411BD8E7B8>\n",
-      "<function parent.<locals>.second_child at 0x000002411BD8E840>\n",
-      "Printing from the first_child() function.\n",
-      "Printing from the second_child() function.\n"
+      "Checking if num is 10\n",
+      "Checking if num is 10\n",
+      "<function parent.<locals>.first_child at 0x10e121dd0>\n",
+      "<function parent.<locals>.second_child at 0x10e121d40>\n"
      ]
     }
    ],
@@ -342,15 +380,31 @@
     "bar = parent(11)\n",
     "\n",
     "print(foo)\n",
-    "print(bar)\n",
-    "\n",
+    "print(bar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing from the first_child() function.\n",
+      "Printing from the second_child() function.\n"
+     ]
+    }
+   ],
+   "source": [
     "print(foo())\n",
     "print(bar())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +413,7 @@
        "'first_child'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +433,7 @@
        "'second_child'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -459,10 +513,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Something is happening before some_function() is called.\n",
+      "Yey, my_fun() called!\n",
+      "Something is happening after some_function() is called.\n"
+     ]
+    }
+   ],
+   "source": [
+    "@my_decorator\n",
+    "def my_fun():\n",
+    "    print(\"Yey, my_fun() called!\")\n",
+    "    \n",
+    "# The use of @my_decorator is equivalent to:\n",
+    "#   my_fun = my_decorator(my_fun)\n",
+    "\n",
+    "my_fun()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# you can chain decorators together\n",
+    "\n",
     "@my_decorator\n",
     "@my_decorator\n",
     "def myfun():\n",
@@ -1012,7 +1094,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
