More Decorator Fun

--- a/core/Python Decorators and attr library.ipynb
+++ b/core/Python Decorators and attr library.ipynb
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,9 +1094,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished\n",
+      "func:'do_something' args:[(), {'num': 10000000}] took: 3.8570 sec\n"
+     ]
+    }
+   ],
    "source": [
     "@timeit\n",
     "def do_something(num = 1_000_000):\n",
@@ -1109,12 +1118,462 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished simple thing\n",
+      "func:'do_simple_thing' args:[(), {'num': 10000000}] took: 1.3313 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "@timeit\n",
+    "def do_simple_thing(num = 1_000_000):\n",
+    "    res = []\n",
+    "    for i in range(num):\n",
+    "        res.append(i)\n",
+    "    print(\"Finished simple thing\")\n",
+    "        \n",
+    "do_simple_thing(num = 10_000_000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@timeit\n",
+    "def do_anything(num = 1_000_000, fun = lambda x: x):\n",
+    "    \"\"\"\n",
+    "    Apply function fun num times\n",
+    "    \"\"\"\n",
+    "    res = []\n",
+    "    for i in range(num):\n",
+    "        res.append(fun(i))\n",
+    "    print(f\"Finishinged running {fun} {num} times\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finishinged running <function <lambda> at 0x000001D74E8DBF70> 1000000 times\n",
+      "func:'do_anything' args:[(), {}] took: 0.2278 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "do_anything()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finishinged running <function <lambda> at 0x000001D74E8DBF70> 10000000 times\n",
+      "func:'do_anything' args:[(10000000,), {}] took: 2.5146 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "do_anything(10_000_000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finishinged running <function <lambda> at 0x000001D74E44B160> 10000000 times\n",
+      "func:'do_anything' args:[(10000000, <function <lambda> at 0x000001D74E44B160>), {}] took: 4.7093 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "do_anything(10_000_000, lambda x: x**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finishinged running <function <lambda> at 0x000001D74E44B0D0> 10000000 times\n",
+      "func:'do_anything' args:[(10000000, <function <lambda> at 0x000001D74E44B0D0>), {}] took: 2.4081 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "do_anything(10_000_000, lambda x: x+x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# it could very well be that we are hitting some CPU caches here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.330412287020886"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.random()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finishinged running <function <lambda> at 0x000001D74E44B550> 1000000 times\n",
+      "func:'do_anything' args:[(), {'fun': <function <lambda> at 0x000001D74E44B550>}] took: 0.3258 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "do_anything(fun = lambda _: random.random())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finishinged running <function <lambda> at 0x000001D74CBEF3A0> 10000000 times\n",
+      "func:'do_anything' args:[(10000000, <function <lambda> at 0x000001D74CBEF3A0>), {}] took: 2.9727 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "do_anything(10_000_000, lambda _: random.random())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# turns out that pseudo random numbers are generated faster than power of 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finishinged running <function <lambda> at 0x000001D74CBBDDC0> 10000000 times\n",
+      "func:'do_anything' args:[(10000000, <function <lambda> at 0x000001D74CBBDDC0>), {}] took: 2.5320 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "do_anything(10_000_000, lambda x: x*x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finishinged running <function <lambda> at 0x000001D74CBBDDC0> 10000000 times\n",
+      "func:'do_anything' args:[(10000000, <function <lambda> at 0x000001D74CBBDDC0>), {}] took: 5.3346 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "do_anything(10_000_000, lambda x: x**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finishinged running <function <lambda> at 0x000001D74CBBDDC0> 10000000 times\n",
+      "func:'do_anything' args:[(10000000, <function <lambda> at 0x000001D74CBBDDC0>), {}] took: 3.6518 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "do_anything(10_000_000, lambda x: x*x*x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finishinged running <function <lambda> at 0x000001D74CBBDD30> 10000000 times\n",
+      "func:'do_anything' args:[(10000000, <function <lambda> at 0x000001D74CBBDD30>), {}] took: 5.8676 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "do_anything(10_000_000, lambda x: x**3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished\n",
+      "func:'do_something' args:[(), {}] took: 0.4121 sec\n",
+      "Finished\n",
+      "func:'do_something' args:[(), {}] took: 0.3892 sec\n",
+      "Finished\n",
+      "func:'do_something' args:[(), {}] took: 0.3910 sec\n",
+      "Finished\n",
+      "func:'do_something' args:[(), {}] took: 0.4260 sec\n",
+      "Finished\n",
+      "func:'do_something' args:[(), {}] took: 0.4392 sec\n",
+      "Finished\n",
+      "func:'do_something' args:[(), {}] took: 0.4069 sec\n",
+      "Finished\n",
+      "func:'do_something' args:[(), {}] took: 0.4124 sec\n",
+      "Finished\n",
+      "func:'do_something' args:[(), {}] took: 0.4097 sec\n",
+      "411 ms ± 16.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit \n",
+    "do_something()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished\n",
+      "func:'do_something' args:[(), {}] took: 0.3675 sec\n",
+      "Wall time: 368 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "do_something()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101 ns ± 3.31 ns per loop (mean ± std. dev. of 7 runs, 10000000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "random.random()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "142 ns ± 6.34 ns per loop (mean ± std. dev. of 7 runs, 10000000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "random.random()+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished\n",
+      "func:'do_something' args:[(), {}] took: 0.3842 sec\n",
+      "Finished simple thing\n",
+      "func:'do_simple_thing' args:[(), {}] took: 0.1326 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "do_something()\n",
+    "do_simple_thing()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Class Exercise\n",
     "* Write a Python program to make a chain of function decorators for text to wrap in HTML tags\n",
     "* Possible decorators (bold, italic, underline, any others ?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO create a decorator here\n",
+    "def strong(f):\n",
+    "    \"\"\"\n",
+    "    Wraps text in <strong> tag\n",
+    "    \"\"\"\n",
+    "    @functools.wraps(f)\n",
+    "    def wrapper_decorator(*args, **kwargs):\n",
+    "        # Do something before\n",
+    "        value = \"<strong>\"\n",
+    "        value += f(*args, **kwargs)\n",
+    "        # Do something after\n",
+    "        return value+\"</strong>\"\n",
+    "    return wrapper_decorator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@strong\n",
+    "def my_text_function(text):\n",
+    "    return f\"Hello {text}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<strong>Hello Valdis</strong>'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_text_function(\"Valdis\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "601 ns ± 14.1 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "my_text_function(\"Uldis\")"
    ]
   },
   {
@@ -1282,7 +1741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
